# clockify-scraping

./: .gitignore  Dockerfile  README.md  pyproject.toml
clockify_scraping/: clockify_api.py  data_processor.py  main.py  sheet_connect.py
clockify_scraping/api/: main.py
clockify_scraping/config/: settings.py
excelify/: README.md  pyproject.toml
excelify/excelify/: clockify_handler.py  main.py  sheet_handler.py  table_formating.py
excelify/excelify/config/: settings.py
excelify/excelify/data/: hardwario-clockify.xlsx
reportify/: README.md  pyproject.toml
reportify/reportify/: clockify_handler.py  excel_handler.py  main.py  sheet_handler.py
reportify/reportify/config/: settings.py
sheetify/: README.md  clockify_api.py  clockify_handler.py  data_processor.py  main.py  pyproject.toml  sheet_connect.py  sheet_handler.py
sheetify/sheetify/: clockify_handler.py  main.py  sheet_handler.py
sheetify/sheetify/config/: settings.py
