[tool.poetry]
name = "sheetify"
version = "0.1.0"
description = "Extract data from Clockify API and write it to Google Sheets"
authors = ["Nikita Chuprin <nikita.chuprin@hardwario.com>"]
license = "MIT"
packages = [{include = "sheetify"}]

[tool.poetry.scripts]
sheetify = "sheetify.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
gspread = "^6.1.0"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.7.0", "wheel"]
build-backend = "poetry.core.masonry.api"
